k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-test-service
  namespace: joseperezg-duoc
spec:
  type: ClusterIP
  selector:
    app: backend-test
  ports:
    - port: 3000
      targetPort: 3000
